--- a/vignettes/data-auditing.Rmd
+++ b/vignettes/data-auditing.Rmd
@@ -25,14 +25,14 @@ library(jfa)
 
 ## Introduction
 
-Welcome to the 'Data auditing' vignette of the **jfa** package. Here you can
-find a simple explanation of the functions in the package that facilitate data
-auditing. Specifically, the functions in this section implement techniques to
-test the distribution of (leading) digits against a reference distribution
-(e.g., Benford's law) and techniques to assess whether values are repeated more
-often than expected. The **jfa** package enables users to create a prior
-probability distribution to perform Bayesian data auditing using these
-functions.
+Welcome to the 'Data auditing' vignette of the **jfa** package. This page
+provides a straightforward guide to the functions in the package that are
+designed to facilitate data auditing. Specifically, these functions implement
+techniques to test the distribution of (leading or last) digits against a
+reference distribution (e.g., Benford's law), and techniques to assess whether
+values are repeated more frequently than expected. The package enables users to
+specify a prior probability distribution to perform Bayesian data auditing with
+these functions.
 
 ## Functions and intended usage
 
@@ -44,32 +44,22 @@ Below you can find an explanation of the available data auditing functions in
 
 ### Testing digit distributions
 
-The function `digit_test()` takes a vector of numeric values, extract the
+The `digit_test()` function accepts a vector of numeric values, extracts the
 requested digits, and compares the frequencies of these digits to a reference
 distribution. By default, the function performs a frequentist hypothesis test of
 the null hypothesis that the digits are distributed according to the reference
-distribution and produces a *p* value. When a prior is specified, the function
+distribution, and produces a *p*-value. When a prior is specified, the function
 performs a Bayesian hypothesis test of the null hypothesis that the digits are
 distributed according to the reference distribution against the alternative
 hypothesis that the digits are not distributed according to the reference
-distribution and produces a Bayes factor [@kass_1995].
+distribution, and produces a Bayes factor [@kass_1995]. The function returns an
+object that can be used with the associated `summary()` and `plot()` methods.
 
-For more information about this function, see the
+For additional details about this function, please refer to the
 [function documentation](https://koenderks.github.io/jfa/reference/digit_test.html)
 on the package website.
 
 *Example usage:*
-
-Benford's law [@benford_1938] is a principle that describes a pattern in many
-naturally-occurring numbers. According to Benford's law, each possible leading
-digit *d* in a naturally occurring, or non-manipulated, set of numbers occurs
-with a probability:
-
-<img src="https://latex.codecogs.com/svg.image?p(d_i)&space;=&space;\text{log}_{10}(1&space;+&space;\frac{1}{d_i})" title="p(d_i) = \text{log}_{10}(\frac{1}{d_i})" />
-
-The distribution of leading digits in a data set of financial transaction values
-(e.g., the `sinoForest` data) can be extracted and tested against the expected
-frequencies under Benford's law using the code below.
 
 ```{r}
 # Compare first digits to Benford's law
@@ -78,24 +68,18 @@ digit_test(sinoForest[["value"]], check = "first", reference = "benford")
 
 ### Testing for repeated values
 
-The function `repeated_test()` analyzes the frequency with which values get
+The `repeated_test()` function analyzes the frequency with which values are
 repeated within a set of numbers. Unlike Benford's law, and its generalizations,
 this approach examines the entire number at once, not only the first or last
-digit. For the technical details of this procedure, see [@simonsohn_2019].
+digit. For the technical details of this procedure, see [@simonsohn_2019]. The
+function returns an object that can be used with the associated `summary()` and
+`plot()` methods.
 
-For more information about this function, see the
+For additional details about this function, please refer to the
 [function documentation](https://koenderks.github.io/jfa/reference/repeated_test.html)
 on the package website.
 
 *Example usage:*
-
-In this example, we analyze a data set from a (retracted) paper that describes
-three experiments run in Chinese factories, where workers were nudged to use
-more hand-sanitizer. These data were shown to exhibited two classic markers of
-data tampering: impossibly similar means and the uneven distribution of last
-digits [@yu_2018]. We can use the `repeated.test()` function to test if these
-data also contain a greater amount of repeated values than expected if the data
-were not tampered with.
 
 ```{r}
 # Inspect last two digits for repeated values
@@ -104,10 +88,10 @@ repeated_test(sanitizer[["value"]], check = "lasttwo", samples = 5000)
 
 ## Benchmarks
 
-To validate the statistical results, **jfa**'s automated
+To ensure the accuracy of statistical results, **jfa** employs automated
 [unit tests](https://github.com/koenderks/jfa/tree/development/tests/testthat)
-regularly verify the main output from the package against the following
-benchmarks:
+that regularly validate the output from the package against the following
+established benchmarks in the area of data auditing:
 
 - [benford.analysis](https://cran.r-project.org/package=benford.analysis) (R package version 0.1.5)
 - [BenfordTests](https://cran.r-project.org/package=BenfordTests) (R package version 1.2.0)
@@ -115,9 +99,8 @@ benchmarks:
 
 ## Cheat sheet
 
-The cheat sheet below will help you get started with **jfa**'s' intended data
-audit functionality. You can download a `pdf` version of the cheat sheet
-[here](https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet-data.pdf).
+The cheat sheet below will help you get started with **jfa**'s data audit
+functionality. A pdf version can be downloaded [here](https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet-data.pdf).
 
 <p align='center'><img src='cheatsheet-data.png' alt='cheatsheet-data' width='1000'></p>
 
